cmake_minimum_required(VERSION 3.29)
project(Summer2025CS101)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)

add_executable(Summer2025CS101
    src/week1/lab1.txt
    "src/week2/lab1/problem 6.cpp"
    "src/week2/lab1/problem 7.cpp"
    src/week2/lab1/problem1.cpp
    src/week2/lab1/problem2.cpp
    src/week2/lab1/problem3.cpp
    src/week2/lab1/problem4.cpp
    src/week2/lab1/problem5.cpp
    src/week2/lab2/problem1.cpp
        src/week2/lab2/problem2.cpp
        src/week2/lab2/problem3.cpp
        src/week2/lab2/problem4.cpp
        src/week2/lab2/problem5.cpp
        src/week2/lab2/problem6.cpp
        src/week2/lab2/problem7.cpp
        src/week2/lab2/problem8.cpp
        src/week2/lab3/problem1.cpp
        src/week2/lab3/problem2.cpp
        src/week2/lab3/problem3.cpp
        src/week2/lab3/problem4.cpp
        src/week2/lab3/problem5.cpp
        src/week2/lab4/problem1.cpp
        src/week2/lab4/problem2.cpp
        src/week2/lab4/problem3.cpp
        src/week2/lab4/problem4.cpp
        src/week2/lab4/problem5.cpp
        src/week2/lab4/problem6.cpp
        src/week2/lab4/problem7.cpp
        src/week2/lab4/problem8.cpp
        src/week2/lab5/problem1.cpp
        src/week2/lab5/problem2.cpp
        src/week2/lab5/problem3.cpp
        src/week2/lab5/problem4.cpp
        src/week2/lab5/problem5.cpp
        src/week2/lab5/problem6.cpp
        src/week2/lab5/problem7.cpp
        "Week 3/Lab 1/problem1.cpp"
        "Week 3/Lab 1/problem3.cpp")
